<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/bottom"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/direct"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/ball"
            android:text="@string/direct"
            android:textColor="@color/white"
            android:textSize="11sp" />

        <Button
            android:id="@+id/search"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/search"
            android:text="@string/recherche"
            android:textColor="@color/white"
            android:textSize="11sp" />

        <Button
            android:id="@+id/favoris"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@android:drawable/btn_star"
            android:text="@string/favoris"
            android:textColor="@color/white"
            android:textSize="11sp" />

        <Button
            android:id="@+id/classement"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@android:drawable/ic_menu_sort_by_size"
            android:text="@string/classement"
            android:textColor="@color/white"
            android:textSize="11sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>