<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginStart="1dp"
            android:background="@color/bottom"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/direct"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableTop="@drawable/ball"
                android:text="@string/direct"
                android:textColor="@color/white"
                android:textSize="11sp" />

            <Button
                android:id="@+id/search"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableTop="@drawable/search"
                android:text="@string/recherche"
                android:textColor="@color/white"
                android:textSize="11sp" />

            <Button
                android:id="@+id/favoris"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableTop="@android:drawable/btn_star"
                android:text="@string/favoris"
                android:textColor="@color/white"
                android:textSize="11sp" />

            <Button
                android:id="@+id/classement"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableTop="@android:drawable/ic_menu_sort_by_size"
                android:text="@string/classement"
                android:textColor="@color/white"
                android:textSize="11sp" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.5"
            android:background="@color/bottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <ImageButton
                android:id="@+id/parametre"
                android:layout_width="56dp"
                android:layout_height="35dp"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:baselineAligned="false"
                android:contentDescription="@string/parametres"
                android:scaleType="fitCenter"
                android:text="@string/parametres"
                android:textSize="11sp"
                android:theme="@style/Btncolor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/img_1564" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
