<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/classement_general"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginStart="24dp"
            android:background="#B39494"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="86dp">

            <ScrollView
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/contenu_droite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/classement_gauche"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">


                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="1dp"
                            android:layout_marginTop="1dp"
                            android:background="#604E4E"
                            android:orientation="horizontal"
                            app:layout_constraintStart_toStartOf="parent"

                            app:layout_constraintTop_toTopOf="parent">

                            <TextView
                                android:id="@+id/equipe_title"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="5dp"
                                android:layout_weight="1"
                                android:text="@string/equipe_title"
                                android:textSize="14sp" />

                        </LinearLayout>
                    </LinearLayout>

                    <HorizontalScrollView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#36816F">

                        <LinearLayout
                            android:id="@+id/classement_droite"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical" />
                    </HorizontalScrollView>

                </LinearLayout>
            </ScrollView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@color/bottom"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/direct"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableTop="@drawable/ball"
                android:text="@string/direct"
                android:textColor="@color/white"
                android:textSize="11sp" />

            <Button
                android:id="@+id/search"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableTop="@drawable/search"
                android:text="@string/recherche"
                android:textColor="@color/white"
                android:textSize="11sp" />

            <Button
                android:id="@+id/favoris"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableTop="@android:drawable/btn_star"
                android:text="@string/favoris"
                android:textColor="@color/white"
                android:textSize="11sp" />

            <Button
                android:id="@+id/classement"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableTop="@android:drawable/ic_menu_sort_by_size"
                android:text="@string/classement"
                android:textColor="@color/white"
                android:textSize="11sp" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
